Added Templates page and revised home page.

--- a/src/AbpWebSite/AbpWebSite.Web/AbpWebSite.Web.csproj
+++ b/src/AbpWebSite/AbpWebSite.Web/AbpWebSite.Web.csproj
@@ -309,6 +309,8 @@
     <Compile Include="Controllers\DocumentsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\AbpWebSiteControllerBase.cs" />
+    <Compile Include="Controllers\ProjectCreator.cs" />
+    <Compile Include="Controllers\TemplatesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -325,6 +327,8 @@
     <Content Include="Views\Shared\_TopBar.cshtml" />
     <Content Include="Views\Shared\_TopMenu.cshtml" />
     <Content Include="Views\Documents\Index.cshtml" />
+    <Content Include="Views\Templates\Index.cshtml" />
+    <Content Include="Views\Shared\Error.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
