--- a/src/AbpWebSite/AbpWebSite.Application/packages.config
+++ b/src/AbpWebSite/AbpWebSite.Application/packages.config
@@ -6,5 +6,6 @@
   <package id="Castle.Core" version="3.2.2" targetFramework="net451" />
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net451" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net451" />
+  <package id="DotNetZip" version="1.9.2" targetFramework="net451" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.30" targetFramework="net451" />
 </packages>
